	PR binutils/13121 	* reloc.c (bfd_generic_lookup_section_flags): Rename 'finfo' to 	'flaginfo' to avoid conflicts with AIX system headers.